--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,4 +1,21 @@
+@import url('https://fonts.googleapis.com/css?family=El+Messiri|Roboto+Condensed&display=swap');
+*{
+  margin: 0;
+  padding: 0;
 
+}
+
+body{
+  background: #FBD3E9;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #BB377D, #FBD3E9);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #BB377D, #FBD3E9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  margin: 0;
+  padding: 0;
+}
+.logo{
+  position: relative;
+
+}
 .first-screen{
     margin: auto;
     width: 70%;
@@ -11,8 +28,9 @@
     border-radius: 10px;
     border: 1px solid rgba(0, 0, 0, 0.2);
     margin-top: 6%;
+    font-family: 'El Messiri';
   }
-  .form,.btn-login,#btn-google,#btn-facebook, #register{
+  .form,.btn-login,#btn-google,#btn-facebook, #register-here{
     display:block;
     padding: 10px;
     width: 100%;
@@ -25,7 +43,7 @@
   }
   
  
-  #btn-google,#btn-facebook, #register, .btn-login{
+  #btn-google,#btn-facebook, #register-here, .btn-login{
     font-size: 15px;
     background-color:rgba(214, 132, 153, 0.74);
     display: flex;
