--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -12,6 +12,8 @@ body{
   margin: 0;
   padding: 0;
 }
+
+
 .logo{
   position: relative;
 
@@ -60,3 +62,9 @@ body{
     width: 25px;
     height: 25px;
   }
+
+h3, #btn-about{
+  float: left;
+  margin-left:3.5rem;
+  justify-content: center;
+}
