--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3,10 +3,15 @@
   margin: 0;
   padding: 0;
 }
-
-body{
-  background-image: linear-gradient(to left, #e9a1d3, #d682bb, #c262a2, #af408a, #9b1372);
+@viewport {
+  min-width: 640px;
+  max-width: 800px;
 }
+
+ body{
+   background-image: linear-gradient(to left, #e9a1d3, #d682bb, #c262a2, #af408a, #9b1372);
+ }
+
 
 .first-screen{
     margin: auto;
