--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3,13 +3,15 @@
   margin: 0;
   padding: 0;
 }
+/*media screen*/
 @viewport {
-  min-width: 640px;
-  max-width: 800px;
+  min-width:80%;
+  max-width: 80%;
 }
 
  body{
-   background-image: linear-gradient(to left, #e9a1d3, #d682bb, #c262a2, #af408a, #9b1372);
+   background-image: linear-gradient(to top, #e9a1d3, #d682bb, #c262a2, #af408a, #9b1372);
+   display:flex;
  }
 
 
@@ -26,6 +28,7 @@
     border: 1px solid rgba(0, 0, 0, 0.2);
     margin-top: 6%;
     font-family: 'El Messiri';
+  
 }
 
 .form,
@@ -47,6 +50,7 @@
     cursor: pointer;
     border-radius: 15px;
     margin-bottom: 0;
+    display:flex;
 }
 
 #btn-google,
@@ -77,6 +81,6 @@
   }
 h3, #btn-about{
   float: left;
-  margin-left:3.5rem;
+  margin: 0.1rem;
   justify-content: center;
 }
