--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=El+Messiri|Roboto+Condensed&display=swap');
+    @import url('https://fonts.googleapis.com/css?family=El+Messiri|Roboto+Condensed&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -36,7 +36,8 @@ h1 {
 .btn-send,
 .btn-back-password,
 .btn-sign-out,
-.btn-posting {
+.btn-posting,
+.btn-exit {
     width: 87%;
     height: 50px;
     padding: 6px;
@@ -109,36 +110,37 @@ footer {
     height: 50px;
 }
 
+
 /* estilo de plantilla sos */
-.container-SOS{
+
+.container-SOS {
     /* background: rgb(241, 177, 210); */
-    
     margin-left: .6em;
     font-size: 25px;
-    border-radius:6px;
+    border-radius: 6px;
     font-family: 'El Messiri';
 }
- #number{  
-      margin-left: 3px;
-      color: #B52C72;
-      font-weight: bold;
-} 
-#number2{  
- margin-left: 1em;
- color: #B52C72;
- font-weight: bold;
-} 
-.container-SOS a{
-    color:#B52C72;
 
-
-textarea {
-    width: 80%;
-    height: 70px;
-    padding: 6px;
-    margin: 10px 0;
-    border-radius: 4px;
-    border: 2px solid #efefef;
-    cursor: pointer;
-
+#number {
+    margin-left: 3px;
+    color: #B52C72;
+    font-weight: bold;
 }
+
+#number2 {
+    margin-left: 1em;
+    color: #B52C72;
+    font-weight: bold;
+}
+
+.container-SOS a {
+    color: #B52C72;
+    textarea {
+        width: 80%;
+        height: 70px;
+        padding: 6px;
+        margin: 10px 0;
+        border-radius: 4px;
+        border: 2px solid #efefef;
+        cursor: pointer;
+    }
